--- a/kubernetes/nginx/static/index.html
+++ b/kubernetes/nginx/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>connection project</title>
+    <title>Connection Project - Главная</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,68 +15,91 @@
         .header {
             background: linear-gradient(135deg, #68d391 0%, #48bb78 100%);
             color: white;
-            padding: 2rem;
-            border-radius: 10px;
-            margin-bottom: 2rem;
+            padding: 3rem;
+            border-radius: 15px;
+            margin-bottom: 3rem;
             text-align: center;
         }
-        .thumbnails {
+        .header h1 {
+            font-size: 3rem;
+            margin: 0;
+        }
+        .header p {
+            font-size: 1.2rem;
+            margin: 1rem 0 0 0;
+            opacity: 0.9;
+        }
+        .gallery {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
         }
-        .thumbnail {
+        .gallery-item {
             background: white;
             padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             text-align: center;
+            transition: transform 0.3s ease;
         }
-        .thumbnail img {
+        .gallery-item:hover {
+            transform: translateY(-5px);
+        }
+        .gallery-item img {
             max-width: 100%;
-            height: 200px;
+            height: 250px;
             object-fit: cover;
-            border-radius: 5px;
+            border-radius: 8px;
+            border: 2px solid #e2e8f0;
         }
-        .links {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 10px;
+        .navigation {
+            text-align: center;
+            margin-top: 2rem;
         }
-        .links a {
-            display: block;
-            padding: 15px;
+        .nav-button {
+            display: inline-block;
+            padding: 15px 30px;
             background: #68d391;
             color: white;
             text-decoration: none;
-            border-radius: 5px;
-            text-align: center;
-            transition: all 0.3s;
+            border-radius: 8px;
             font-weight: bold;
+            font-size: 1.1rem;
+            transition: all 0.3s ease;
+            margin: 0 10px;
         }
-        .links a:hover {
+        .nav-button:hover {
             background: #48bb78;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(72, 187, 120, 0.3);
+            box-shadow: 0 6px 20px rgba(72, 187, 120, 0.4);
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>connection project</h1>
-        <p>Добро пожаловать в систему управления устройствами</p>
+        <h1>Connection Project</h1>
+        <p>Инновационная система управления устройствами и подключениями</p>
     </div>
 
-    <div class="links">
-        <a href="/api-docs/v1">API v1 Docs</a>
-        <a href="/swagger" target="_blank">Swagger UI</a>
-        <a href="/legacy">Legacy System</a>
-        <a href="/documentation">docs</a>
-        <a href="/status/pretty">Server Status</a>
-        <a href="/reserved/">Reserved Area</a>
-        <a href="/admin">Admin</a>
-        
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="/static/documentation/img/ui/1.png" alt="Интерфейс системы - 1">
+        </div>
+        <div class="gallery-item">
+            <img src="/static/documentation/img/ui/2.png" alt="Интерфейс системы - 2">
+        </div>
+        <div class="gallery-item">
+            <img src="/static/documentation/img/ui/3.png" alt="Интерфейс системы - 3">
+        </div>
+        <div class="gallery-item">
+            <img src="/static/documentation/img/ui/4.png" alt="Интерфейс системы - 4">
+        </div>
+    </div>
+
+    <div class="navigation">
+        <a href="/management" class="nav-button">Панель управления</a>
+        <a href="/documentation" class="nav-button">Документация</a>
     </div>
 </body>
 </html>
